# m1-screamers-rust

./: Cargo.toml  README.md
src/: bench_1.rs  bench_2.rs  bench_4.rs  bench_6.rs  main.rs
