[package]
name = "m1-screamers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.24"
sha2 = "0.10.8"
threadpool = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }
